2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amanda-rest-server.pl: Create the dbgdir

2018-01-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog2/SQLite.pm: Retry transaction on
	  /database schema has changed/

2018-01-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/server_util.c: Fix printf formatting

2018-01-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Taper/Worker.pm: Set input_errors on Recovery error

2018-01-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Taper/Scribe.pm (_dbg): Improve debugging

2018-01-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Taper/Controller.pm: Quit the Clerk on START_TAPER,
	  Add debugging

2018-01-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/ScanInventory.pm (_scan_): Set scanning to 0 on error

2018-01-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Changer.pm, perl/Amanda/Changer/diskflat.pm: Try to get
	  the lock more often, otherwise we might never get it if another
	  thread lock it often

2018-01-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/match.c (match_labelstr_template, match_labelstr):
	  Checklabel is not NULL

2018-01-17  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Taper_Scan.pl,
	  installcheck/DB_Catalolog2/amdump.catalog.1,
	  installcheck/Installcheck/DBCatalog2.pm,
	  installcheck/amdump.pl,
	  server-src/amserverconfig.pl: Fix for different config and timezone

2018-01-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* man/xml-source/amanda.conf.5.xml: Add rest-api-port

2018-01-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog2/MySQL.pm: Do the 'use DBD::mysql' in eval so
	  it is not added in the package dependencies

2018-01-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amstatus.pl: Add a --[no]taped argument
